[package]
name = "emtobe"
description = "Markdown to BB Code (M2B)"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
pulldown-cmark = { version = "0.9.2", default-features = false }
godot = { git = "https://github.com/godot-rust/gdext.git", rev = "52628a0a8cb7d4c2d784a930261220ce3c0cb31d" }
